
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.

2017-01-23 niel
	Mrg: PR 2364, from krabsheva - Fixes typo in ProcessAdditional.php which prevented timeout
		setting being used correctly.
2017-01-22 niel
	Fix: Bad settings data for yydecodepath.
2017-01-20 DariusIII
	Fix: Change leftover references to group_id in python scripts and ProcessReleases class
2017-01-17 niel
	Mrg: dev-db branch which contains changes to binaries, collections, missed, and parts tables.
2017-01-16 niel
	Fix: Work around to prevent some db versions auto-incrementing an explicit 0 for Categories Other's.
2017-01-12 DariusIII
	Fix: Predb page link for predb search (closes issue #2356)
2017-01-11 niel
	Mrg: PR 2353, from kaibosh - Check for incompatible tmux versions and abort if installed.
	Chg: Make kaibosh's fix use version_compare function.
2017-01-09 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.8.1


2017-01-09
	Fix: Paths for install.sh script.
2017-01-02 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.8.0


2016-12-27 niel
	Mrg: PR 2346, from kaibosh - Correct powerline tmux config.
	Add: Created new bash script to clone and use composer install. The script can be run from the
		directory you want nZEDb installed to (usually /var/www) using:
			bash <(curl -s https://raw.githubusercontent.com/nZEDb/nZEDb/0.x/_install/install.sh)
2016-12-26 DariusIII
	Chg: Move predb from frontpage to admin area.
2016-12-22 niel
	Mrg: PR 2343, from kaibosh - Updates tmux configuration for using newer versions.
2016-12-21 b3rs3rk
	Chg: Make match_prefiles more precise with match attempts and reduce initial memory usage.
2016-12-19 niel